--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,6 +23,11 @@
             <i class="bi bi-award-fill"></i> Certificates
           </a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link {% if page.url != '/' and page.url.startswith('/contact') %}active{% endif %}" href="/contact">
+            <i class="bi bi-envelope-fill"></i> Contact Me
+          </a>
+        </li>
       </ul>
     </div>
   </div>
