--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -242,6 +242,7 @@ layout: default
         <span style="font-size:1.2em; margin-right:0.5em;">&#8592;</span> Blog Home
       </a>
     </footer>
+    {% include ascii-art.html %}
   </article>
 </div>
 {% endif %}
