--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -183,7 +183,7 @@
 
     <!-- Lightning overlay (flashes/bolts) -->
     <div id="lightning-overlay" aria-hidden="true"></div>
-+
+
     {% include header.html %}
 
     <!-- Falling leaves animation container -->
@@ -297,8 +297,8 @@
     {% if page.url == '/' %}
       <script src="/assets/js/leaves.js"></script>
       <script src="/assets/js/bats.js"></script>
-+      <script src="/assets/js/rain.js"></script>
-+      <script src="/assets/js/lightning.js"></script>
+      <script src="/assets/js/rain.js"></script>
+      <script src="/assets/js/lightning.js"></script>
     {% endif %}
 
     {% if page.url == '/' %}
